# Trackeep

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile.youtube-search  LICENSE  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY_SUMMARY.md  QUICK_START_PRODUCTION.md  README.md  RELEASE_v1.2.5.md  TIMELINE.md  docker-compose.demo.yml  docker-compose.integrated.yml  docker-compose.original.yml  docker-compose.prod.yml  docker-compose.published.yml  docker-compose.redis.yml  docker-compose.yml  dragonfly.conf  enable-demo-mode.js  go.mod  jwt_secret_test.txt  package-lock.json  package.json  redis.conf  search.go  simple-test.js  start.sh  test-demo-mode.js  test-demo.html  test-production.sh  test-youtube-api.html  update.sh  youtube.html
.desloppify/: config.json  query.json  state-typescript.json
.playwright-cli/: page-2026-02-26T12-34-30-732Z.yml  page-2026-02-26T12-35-04-145Z.yml  page-2026-02-26T15-18-21-814Z.yml  page-2026-02-26T15-20-32-231Z.yml  page-2026-02-26T15-20-59-270Z.yml  page-2026-02-26T15-21-11-692Z.yml  page-2026-02-26T15-22-13-101Z.yml  page-2026-02-26T15-22-17-372Z.yml  page-2026-02-26T15-22-40-730Z.yml  page-2026-02-26T15-23-08-291Z.yml  page-2026-02-26T15-23-10-396Z.yml  page-2026-02-26T15-23-13-524Z.yml  page-2026-02-26T15-23-39-611Z.yml  page-2026-02-26T15-24-15-685Z.yml  page-2026-02-26T15-24-43-380Z.yml  page-2026-02-26T15-25-38-932Z.yml  page-2026-02-26T15-25-43-063Z.yml  (+78 more)
backend/: go.mod  (+7 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
(+530 files in other folders)
