[package]
name = "trackeep_desktop"
version = "1.0.0"
description = "Trackeep desktop shell"
authors = ["Trackeep Team"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
mime_guess = "2"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
url = "2"
walkdir = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
